SearchServiceImpl has been rewritten